# brdb

./: .gitignore  Cargo.toml  README.md
crates/brdb/: Cargo.toml  README.md
crates/brdb/examples/: count_wires.rs  dump_assets.rs  dump_canonical.rs  dump_fixture.rs  dump_meta.rs  dump_schema_meta.rs  dump_variants.rs  extract_assets.rs  extract_defaults.rs  extract_raw_schema.rs  inspect_blobs.rs  inspect_grids.rs  read_components.rs  schema_roundtrip.rs  write_fixtures.rs  write_prefab.rs  write_prefab_spawner.rs  write_wire.rs
crates/brdb/schemas/: BRSavedBrickChunkSoA.schema  BRSavedComponentChunkSoA.schema  BRSavedComponentChunkSoA_max.schema  BRSavedEntityChunkSoA.schema  BRSavedGlobalDataSoA.schema
crates/brdb/src/: errors.rs  fs.rs  lib.rs  pending.rs  pending_tests.rs  plaintext.lalrpop
crates/brdb/src/assets/: bricks.rs  entities.rs  external.rs  literal_component.rs  mod.rs
crates/brdb/src/assets/gates/: buffer.rs  logic.rs  rerouter.rs
crates/brdb/src/brdb/: mod.rs
crates/brdb/src/brz/: mod.rs  tests.rs
crates/brdb/src/reader/: mod.rs  reader_trait.rs
crates/brdb/src/schema/: as_brdb.rs  global_data.rs  mod.rs  read.rs  value.rs  write.rs
crates/brdb/src/tests/: mod.rs
crates/brdb/src/wrapper/: bits.rs  brick.rs  common.rs  component_db.rs  components.rs  entities.rs  meta.rs  mod.rs  owners.rs  save.rs  schemas.rs  wire.rs  world.rs
crates/brdb/tests/: real_prefabs.rs
crates/brzip/: Cargo.toml  README.md
crates/brzip/src/: main.rs
docs/: README.md
docs/format/: determinism.md
docs/format/brdb/: blobs.md  file-tree.md  (+1 more)
(+9 files in other folders)
