[package]
name = "brdb"
version = "0.4.0"
authors = ["Isaac <gpg@reheatedcake.io>"]
description = "A library for reading and writing Brickadia's World files."
edition = "2024"
keywords = ["brickadia", "brdb", "brs", "msgpack-schema", "gamedev"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/brickadia-community/brdb.git"
rust-version = "1.88"

[features]
default = ["brdb", "brz"]
brdb = ["rusqlite"]
brz = []

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
# blobs hashes
blake3 = "1.8.2"
# ordering structs
indexmap = { version = "2.9.0", features = ["serde"] }
# only used to sort brick iters... can probably replace this
itertools = "0.14.0"
# parsing struct grammer
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
# msgpack-schema parsing
rmp = "0.8.14"
# read write of brdb files
rusqlite = { optional = true, version = "0.36.0", features = [
  "blob",
  "bundled",
] }
# meta json file serialization
serde_json = "1.0.140"
# meta json file serialization
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
# blob compression
zstd = "0.13.3"
uuid = { version = "1.17.0", default-features = false, features = [] }
